<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/intro_background"
    android:orientation="vertical"
    tools:context="com.example.android.instalineenterprise.AddProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/intro3" />

    <TextView
        android:id="@+id/tap_to_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TapToEdit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfield_2dp_style"
        android:hint="@string/UsernameHint"
        android:padding="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfield_2dp_style"
        android:hint="@string/AddressHint"
        android:padding="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/category_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfield_2dp_style"
        android:hint="@string/CategoryHint"
        android:padding="12dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lblRateMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="16dp"
        android:text="Please select a price range: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="14dp" />

    <Spinner
        android:id="@+id/price_rate"
        android:theme="@style/Spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/gallery_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_2dp_button_style"
        android:text="@string/EnterText"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>
